# rename-many

./: README.md  pyproject.toml  zoo-project.json
src/renamemany/: __init__.py  app.py
