[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rename-many"
version = "0.1.0"
description = "A Tkinter GUI for renaming many files and folders in a directory at once"
requires-python = ">=3.9"
authors = [{ name = "Lion Kimbro", email = "lionkimbro@gmail.com" }]

[project.scripts]
rename-many = "renamemany.app:main"

[tool.setuptools.packages.find]
where = ["src"]
